Mon Aug 23 12:43:32 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/resolv.rb (Config.default_config_hash): when multiple domains
	  are set, Win32::Resolv.get_resolv_info returns Array.

Sun Aug 22 16:27:38 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_read):
	  - should return an empty string if specified length to read is 0.
	  - should check for pending data and wait for fd before reading.
	  - call underlying IO's sysread if SSL session is not started.
	  [ruby-dev:24072], [ruby-dev:24075]

	* ext/openssl/ossl_ssl.c (ossl_ssl_write):
	  - call underlying IO's syswrite if SSL session is not started.

	* ext/openssl/ossl_ssl.c (ossl_ssl_pending): new method
	  OpenSSL::SSL#pending.

	* ext/openssl/lib/openssl/buffering.rb: should not use select.

Sun Aug 22 01:10:36 2004  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* lib/webrick/httpproxy.rb (WEBrick::HTTPProxyServer#proxy_connect):
	  should call :ProxyContentHandler before finishing CONNECT.

Sat Aug 21 06:41:16 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/tcltklib/extconf.rb (find_tcl, find_tk): find stub library.

	* lib/mkmf.rb (arg_config, with_config): deal with '-' and '_'
	  uniformly.  [ruby-dev:24118]

Fri Aug 20 14:49:42 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* io.c (rb_io_check_writable): no need to check read buffer if
	  already changed to write mode.

Fri Aug 20 11:46:43 2004  UENO Katsuhiro  <katsu@blue.sky.or.jp>

	* ext/zlib/zlib.c: GzipReader#ungetc caused crc error.

Thu Aug 19 16:29:45 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: Fail to treat a hash value of 'font' option.

	* ext/tk/lib/tk.rb: bindinfo cannot return '%' substiturion infomation.

	* ext/tk/lib/menu.rb: typo bug.

Thu Aug 19 15:15:24 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* dir.c (free_dir): fix memory leak.  reported by yamamoto
	  madoka.

Thu Aug 19 09:19:27 2004  NAKAMURA Usaku  <usa@ruby-lang.org>
